-- =============================
-- DROP TABLES IF EXISTS
-- =============================

DROP TABLE IF EXISTS reports CASCADE;
DROP TABLE IF EXISTS drivers CASCADE;
DROP TABLE IF EXISTS police CASCADE;
DROP TABLE IF EXISTS cars CASCADE;
DROP TABLE IF EXISTS motorcycles CASCADE;
DROP TABLE IF EXISTS buses CASCADE;
DROP TABLE IF EXISTS vehicles CASCADE;
DROP TABLE IF EXISTS persons CASCADE;

-- =============================
-- CREATE TABLES
-- =============================

-- Parent Table: Vehicles
CREATE TABLE vehicles (
    vehicle_id INTEGER PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
    plate_number VARCHAR(20) UNIQUE NOT NULL,
    registration_number VARCHAR(50) UNIQUE NOT NULL,
    type VARCHAR(50) NOT NULL,
    make VARCHAR(50) NOT NULL,
    model VARCHAR(50) NOT NULL,
    year INTEGER NOT NULL,
    color VARCHAR(30) NOT NULL,
    fuel_type VARCHAR(20) NOT NULL,
    engine_number VARCHAR(50) UNIQUE NOT NULL,
    chassis_number VARCHAR(50) UNIQUE NOT NULL,
    seats INTEGER NOT NULL,
    vehicle_status VARCHAR(20) NOT NULL,
    registration_date DATE NOT NULL,
    expiry_date DATE NOT NULL,
    insurance_provider VARCHAR(100) NOT NULL,
    insurance_expiry DATE NOT NULL,
    owner_id INTEGER NOT NULL,
    current_location VARCHAR(100),
    notes TEXT
);

-- Car Table (Extends Vehicle)
CREATE TABLE cars (
    vehicle_id INTEGER PRIMARY KEY REFERENCES vehicles(vehicle_id),
    number_of_doors INTEGER NOT NULL,
    body_style VARCHAR(30) NOT NULL,
    transmission VARCHAR(20) NOT NULL,
    drive_type VARCHAR(20) NOT NULL,
    trunk_capacity_liters INTEGER NOT NULL,
    sunroof BOOLEAN NOT NULL,
    infotainment_system VARCHAR(50),
    airbags INTEGER NOT NULL,
    is_luxury BOOLEAN NOT NULL
);

-- Motorcycle Table (Extends Vehicle)
CREATE TABLE motorcycles (
    vehicle_id INTEGER PRIMARY KEY REFERENCES vehicles(vehicle_id),
    engine_capacity_cc INTEGER NOT NULL,
    motorcycle_type VARCHAR(30) NOT NULL,
    gearbox_type VARCHAR(20) NOT NULL,
    cooling_system VARCHAR(20) NOT NULL,
    has_abs BOOLEAN NOT NULL,
    wheel_base_mm INTEGER NOT NULL,
    seat_height_mm INTEGER NOT NULL,
    fuel_tank_capacity DECIMAL(5,2) NOT NULL,
    number_of_strokes INTEGER NOT NULL,
    top_speed_kph INTEGER NOT NULL
);

-- Bus Table (Extends Vehicle)
CREATE TABLE buses (
    vehicle_id INTEGER PRIMARY KEY REFERENCES vehicles(vehicle_id),
    bus_type VARCHAR(30) NOT NULL,
    seating_capacity INTEGER NOT NULL,
    standing_capacity INTEGER NOT NULL,
    is_accessible BOOLEAN NOT NULL,
    assigned_route VARCHAR(50),
    route_type VARCHAR(30),
    operator_company VARCHAR(100),
    inspection_due_date DATE,
    has_cctv BOOLEAN NOT NULL,
    ticketing_system_type VARCHAR(50),
    air_conditioned BOOLEAN NOT NULL
);

-- Parent Table: Persons
CREATE TABLE persons (
    person_id INTEGER PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
    first_name VARCHAR(50) NOT NULL,
    last_name VARCHAR(50) NOT NULL,
    national_id VARCHAR(20) UNIQUE NOT NULL,
    date_of_birth DATE NOT NULL,
    address TEXT NOT NULL,
    phone_number VARCHAR(20) NOT NULL,
    email VARCHAR(100),
    gender VARCHAR(10) NOT NULL,
    blood_type VARCHAR(5),
    emergency_contact VARCHAR(100),
    emergency_phone VARCHAR(20)
);

-- Police Table (Extends Persons)
CREATE TABLE police (
    person_id INTEGER PRIMARY KEY REFERENCES persons(person_id),
    badge_number INTEGER UNIQUE NOT NULL,
    rank VARCHAR(50) NOT NULL,
    department VARCHAR(100) NOT NULL,
    username VARCHAR(50) UNIQUE NOT NULL,
    password VARCHAR(100) NOT NULL,
    join_date DATE NOT NULL,
    status VARCHAR(20) NOT NULL,
    specialization VARCHAR(100),
    rank_level INTEGER NOT NULL DEFAULT 4
);

-- Drivers Table (Extends Persons)
CREATE TABLE drivers (
    person_id INTEGER PRIMARY KEY REFERENCES persons(person_id),
    license_number VARCHAR(20) UNIQUE NOT NULL,
    license_issue_date DATE NOT NULL,
    license_expiry_date DATE NOT NULL,
    license_type VARCHAR(20) NOT NULL,
    points INTEGER DEFAULT 0,
    status VARCHAR(20) NOT NULL,
    restrictions TEXT,
    total_violations INTEGER DEFAULT 0
);

-- Reports Table
CREATE TABLE reports (
    report_id SERIAL PRIMARY KEY,
    police_id INTEGER REFERENCES police(person_id),
    driver_id INTEGER REFERENCES drivers(person_id),
    vehicle_id INTEGER REFERENCES vehicles(vehicle_id),
    report_date TIMESTAMP NOT NULL,
    violation_type VARCHAR(100) NOT NULL,
    location TEXT NOT NULL,
    description TEXT,
    fine DECIMAL(10,2) NOT NULL,
    points_deducted INTEGER NOT NULL,
    status VARCHAR(20) NOT NULL,
    evidence TEXT,
    witness_statement TEXT,
    due_date DATE NOT NULL,
    is_paid BOOLEAN DEFAULT FALSE,
    report_type VARCHAR(20) DEFAULT 'Regular'
);

-- =============================
-- INSERT SAMPLE DATA
-- =============================

-- Persons (Generic data for owners, drivers, and police)
INSERT INTO persons (
    first_name, last_name, national_id, date_of_birth, address, phone_number,
    email, gender, blood_type, emergency_contact, emergency_phone
) VALUES
    ('Ahmed', 'Saleh', 'ID101', '1980-01-15', '123 Police St, City', '555-0101', 'ahmed.saleh@police.com', 'Male', 'O+', NULL, NULL),
    ('Peter', 'Parker', 'ID102', '1985-05-20', '456 Officer Ave, Town', '555-0102', 'peter.parker@police.com', 'Male', 'A+', NULL, NULL),
    ('Tom', 'Stark', 'ID103', '1990-11-30', '789 Cop Rd, Village', '555-0103', 'tom.stark@police.com', 'Male', 'B+', NULL, NULL),
    ('Tony', 'Stark', 'ID104', '1992-07-12', '321 Officer St, City', '555-0104', 'tony.stark@police.com', 'Male', 'AB+', NULL, NULL),
    ('Jef', 'Stark', 'ID105', '1995-09-23', '654 Police Ave, Town', '555-0105', 'jef.stark@police.com', 'Male', 'O-', NULL, NULL),
    ('John', 'Doe', 'ID001', '1985-04-12', '123 Main St, NY', '555-1234', 'john.doe@example.com', 'Male', 'A+', 'Jane Doe', '555-5678'),
    ('Alice', 'Smith', 'ID002', '1990-06-22', '456 Elm St, LA', '555-2345', 'alice.smith@example.com', 'Female', 'B+', 'Bob Smith', '555-6789'),
    ('Carlos', 'Rivera', 'ID003', '1975-03-30', '789 Pine St, CHI', '555-3456', 'carlos.r@example.com', 'Male', 'O+', 'Maria Rivera', '555-7890'),
    ('Engy', 'Mohamed', 'ID004', '2003-09-21', 'Kafr Al Dawar, Egypt', '010-111-2222', 'ahmed.soliman@gmail.com', 'Male', 'AB-', 'Hassan Soliman', '010-333-4444'),
    ('Emily', 'Blunt', 'NID005', '1992-02-15', 'Miami, FL', '555-4567', 'emily.blunt@example.com', 'Female', 'O-', 'Sarah Blunt', '555-8901'),
    ('Tom', 'Hardy', 'ID006', '1988-11-07', 'San Francisco, CA', '555-5678', 'tom.hardy@example.com', 'Male', 'B-', 'Leo Hardy', '555-9012'),
    ('Sophia', 'Williams', 'ID007', '1995-08-12', 'Boston, MA', '555-6789', 'sophia.williams@example.com', 'Female', 'A+', 'Emma Williams', '555-0123'),
    ('Michael', 'Johnson', 'ID008', '1982-12-05', 'Houston, TX', '555-7890', 'michael.johnson@example.com', 'Male', 'O-', 'Linda Johnson', '555-1235'),
    ('Linda', 'Brown', 'ID009', '1978-03-18', 'Seattle, WA', '555-8901', 'linda.brown@example.com', 'Female', 'B+', 'George Brown', '555-2346'),
    ('David', 'Lee', 'ID010', '1987-10-25', 'Denver, CO', '555-9012', 'david.lee@example.com', 'Male', 'AB+', 'Nancy Lee', '555-3457');

-- Police
INSERT INTO police (
    person_id, badge_number, rank, department, username, password, join_date,
    status, specialization, rank_level
) VALUES
    (1, 1001, 'Chief', 'Traffic Division', 'AhmedSaleh', '12345678', '2015-06-01', 'Active', 'Traffic Control', 1),
    (2, 1002, 'Captain', 'Traffic Division', 'Peter', '12345678', '2018-03-15', 'Active', 'Accident Investigation', 2),
    (3, 1003, 'Lieutenant', 'Traffic Division', 'Parker', '12345678', '2019-01-10', 'Active', 'Traffic Control', 3),
    (4, 1004, 'Officer', 'Traffic Division', 'Tom', '12345678', '2020-04-20', 'Active', 'Accident Investigation', 4),
    (5, 1005, 'Officer', 'Traffic Division', 'Tony', '12345678', '2021-02-15', 'Active', 'Traffic Control', 4),
    (12, 1006, 'Sergeant', 'Traffic Division', 'SophiaW', 'password12', '2022-01-10', 'Active', 'Patrol', 3),
    (13, 1007, 'Officer', 'Traffic Division', 'MichaelJ', 'password13', '2023-03-05', 'Active', 'Enforcement', 4),
    (10, 101, 'Sergeant', 'Traffic Division', 'emilyb', 'securepass123', '2020-01-01', 'Active', 'Traffic Violation', 3),
    (11, 102, 'Lieutenant', 'Highway Patrol', 'tomh', 'pass456', '2018-07-15', 'Active', 'Accident Investigation', 2);

-- Drivers
INSERT INTO drivers (
    person_id, license_number, license_issue_date, license_expiry_date,
    license_type, points, status, restrictions, total_violations
) VALUES
    (1, 'DL123456', '2010-01-01', '2025-01-01', 'A', 0, 'Active', NULL, 0),
    (2, 'DL654321', '2015-05-15', '2025-05-15', 'B', 1, 'Active', NULL, 1),
    (3, 'DL789012', '2018-03-20', '2023-03-20', 'C', 2, 'Expired', NULL, 2),
    (4, 'DL345678', '2019-07-30', '2024-07-30', 'D', 0, 'Active', NULL, 0),
    (5, 'DL901234', '2022-11-10', '2027-11-10', 'E', 0, 'Active', NULL, 0),
    (6, 'LIC001', '2020-01-01', '2025-01-01', 'B', 3, 'Active', 'None', 2),
    (7, 'LIC002', '2021-03-10', '2026-03-10', 'A', 1, 'Active', 'None', 1),
    (8, 'LIC003', '2019-06-01', '2024-06-01', 'D', 0, 'Active', 'School Zone Only', 0),
    (9, 'LIC004', '2023-05-01', '2028-05-01', 'B', 0, 'Active', NULL, 0),
    (10, 'LIC005', '2017-09-15', '2027-09-15', 'C', 2, 'Active', NULL, 1),
    (11, 'LIC006', '2016-12-20', '2026-12-20', 'A', 0, 'Active', NULL, 0),
    (14, 'LIC007', '2018-04-05', '2028-04-05', 'B', 1, 'Active', 'Night Only', 2),
    (15, 'LIC008', '2019-08-30', '2029-08-30', 'D', 0, 'Active', NULL, 0);

-- Vehicles
INSERT INTO vehicles (
    plate_number, registration_number, type, make, model, year, color, fuel_type,
    engine_number, chassis_number, seats, vehicle_status, registration_date, expiry_date,
    insurance_provider, insurance_expiry, owner_id, current_location, notes
) VALUES
    ('ABC123', 'REG001', 'Car', 'Toyota', 'Camry', 2020, 'Silver', 'Petrol', 'ENG001', 'CHS001', 5, 'Active',
     '2020-01-01', '2025-01-01', 'State Farm', '2024-12-31', 6, 'New York', 'Regular maintenance'),
    ('XYZ789', 'REG002', 'Motorcycle', 'Honda', 'CBR600', 2021, 'Red', 'Petrol', 'ENG002', 'CHS002', 2, 'Active',
     '2021-03-15', '2026-03-15', 'Progressive', '2024-12-31', 7, 'Los Angeles', 'Track ready'),
    ('BUS456', 'REG003', 'Bus', 'Mercedes', 'Sprinter', 2019, 'White', 'Diesel', 'ENG003', 'CHS003', 20, 'Active',
     '2019-06-01', '2024-06-01', 'Allstate', '2024-12-31', 8, 'Chicago', 'School bus'),
    ('POR123', 'REG006', 'Car', 'Porsche', 'GT3 RS', 2023, 'Blue', 'Petrol', 'ENG006', 'CHS006', 2, 'Active',
     '2023-05-01', '2028-05-01', 'AXA', '2027-12-31', 9, 'Cairo', 'High-performance sports car'),
    ('DEF456', 'REG004', 'Car', 'BMW', 'M5', 2022, 'Black', 'Petrol', 'ENG004', 'CHS004', 5, 'Active',
     '2022-02-01', '2027-02-01', 'Geico', '2024-12-31', 6, 'Miami', 'High performance'),
    ('MOTO789', 'REG005', 'Motorcycle', 'Ducati', 'Panigale', 2023, 'Yellow', 'Petrol', 'ENG005', 'CHS005', 2, 'Active',
     '2023-01-10', '2028-01-10', 'Liberty Mutual', '2024-12-31', 7, 'San Francisco', 'Superbike');

-- Cars
INSERT INTO cars (
    vehicle_id, number_of_doors, body_style, transmission, drive_type,
    trunk_capacity_liters, sunroof, infotainment_system, airbags, is_luxury
) VALUES
    (1, 4, 'Sedan', 'Automatic', 'FWD', 450, true, 'Toyota Entune', 8, false),
    (4, 2, 'Coupe', 'Automatic', 'RWD', 310, true, 'Porsche PCM', 6, true),
    (5, 4, 'Sedan', 'Automatic', 'AWD', 530, true, 'iDrive 8', 10, true);

-- Motorcycles
INSERT INTO motorcycles (
    vehicle_id, engine_capacity_cc, motorcycle_type, gearbox_type, cooling_system,
    has_abs, wheel_base_mm, seat_height_mm, fuel_tank_capacity, number_of_strokes, top_speed_kph
) VALUES
    (2, 600, 'Sport', 'Manual', 'Liquid', true, 1400, 820, 18.5, 4, 240),
    (6, 1100, 'Superbike', 'Manual', 'Liquid', true, 1450, 830, 17.0, 4, 299);

-- Buses
INSERT INTO buses (
    vehicle_id, bus_type, seating_capacity, standing_capacity, is_accessible,
    assigned_route, route_type, operator_company, inspection_due_date, has_cctv,
    ticketing_system_type, air_conditioned
) VALUES
    (3, 'School Bus', 20, 10, true, 'Route 101', 'School', 'City Transport Co.', '2024-06-01',
     true, 'Electronic', true);

-- Reports
INSERT INTO reports (
    police_id, driver_id, vehicle_id, report_date, violation_type, location,
    description, fine, points_deducted, status, evidence, witness_statement,
    due_date, is_paid, report_type
) VALUES
    (10, 6, 1, '2024-05-01 14:30:00', 'Speeding', '5th Ave, NY',
     'Driver was going 80 in a 50 zone', 150.00, 2, 'Open', 'Speed camera footage', 'Witness saw the vehicle speeding', '2024-06-01', false, 'Regular'),
    (11, 7, 2, '2024-04-20 10:00:00', 'Running red light', 'Sunset Blvd, LA',
     'Driver failed to stop at red light', 200.00, 3, 'Paid', 'Traffic light footage', NULL, '2024-05-20', true, 'Regular'),
    (10, 9, 4, '2024-05-10 11:15:00', 'Illegal street racing', 'Nasr City, Cairo',
     'Porsche was seen racing another car', 1000.00, 5, 'Pending', 'Drone video', 'Multiple bystanders reported noise', '2024-06-10', false, 'Criminal');

-- =============================
-- DONE ✅ Your system is ready!
-- =============================
